data/course_content/drive-download-20250613T074912Z-1-001/Project 2/TDS Sep 2024 - Project 2 Evaluation 2024-12-15/logs/22f2000761.log
['git', 'clone', '-q', '--single-branch', '-b', 'main', 'https://github.com/phanthomx/TDSPROJECT2.git', '/root/.local/share/tds-sep-24-project-2/22f2000761']





------------------------------------------------------------------------

['uv', 'run', '/root/.local/share/tds-sep-24-project-2/22f2000761/autolysis.py', '/root/.local/share/tds-sep-24-project-2/datasets/goodreads.csv']



Reading inline script metadata from `/root/.local/share/tds-sep-24-project-2/22f2000761/autolysis.py`
Installed 24 packages in 91ms
  File "/root/.local/share/tds-sep-24-project-2/22f2000761/autolysis.py", line 203
    describe the code in commesnts abt the analysis 
             ^^^
SyntaxError: invalid syntax


------------------------------------------------------------------------

